--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <meta name="desscription" content="My name is George Martins Okon. I am studying computer programming at BYU and this is a web fundamental practice.">
+    <meta name="author" content="George Martins">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="stayles/box-model.css">
     <meta charset="utf-8">
@@ -19,6 +21,13 @@
         <img src="images/profile.jpg" alt="Hello, my name is George Martins" width="200">
         <p>Hello! My name is George Martins and I am from Nigeria. I am currently studying computer programming at BYU</p>
     </main>
+
+    <aside>
+        <h2>Akwa Ibom State</h2>
+        <img src="images/Akwa-Ibom-state-photo.webp" alt="Akwa Ibom State">
+        <p>Akwa Ibom is a state in Nigeria named after the Qua Iboe river. It is located in the coastal South-Southern part of the country, lying between latitudes 4°321 and 5°331 North, and longitudes 7°251 and 8°251 East. The State is bordered on the east by Cross River State, on the west by Rivers State and Abia State, and on the South by the Atlantic Ocean and the southernmost tip of Cross River State. Akwa Ibom is one of Nigeria’s 36 states with a population of over 5 million people and more than 10 million people in diaspora. It was created in 1987 from the former Cross River State and is currently the highest oil and gas producing state in the country</p>
+    </aside>
+  <footer>
     <footer>
         <p>©️2025 ❖ George Martins ❖ Nigeria</p>
     </footer>
