Enhancing Home Page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>George Martins | WDD 130</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -19,17 +20,25 @@
       <main>
         <h1>George Martins | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is George Martins" width="200">
-        <p>Hello! My name is George Martins and I am from Nigeria. I am currently studying computer programming at BYU</p>
+        <p>Hello! My name is George Martins, I am from Akwa Ibom State, Nigeria. My hobbies are cooking, listening to music and surfing the internet. I am the third child amongst five siblings. I am currently studying computer programming at BYU. I love computers and i love working with them. In the future, i hope to become one of the best programmers in the world. </p>
+        <ul>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" target="_blank">Philadelphia Pennsylvania Temple</a></li>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
+          <ul class="box">
+        </ul>
     </main>
 
     <aside>
         <h2>Akwa Ibom State</h2> 
         <img src="images/Akwa-Ibom-state-photo.webp" alt="Akwa Ibom State">
         <p>Akwa Ibom is a state in Nigeria named after the Qua Iboe river. It is located in the coastal South-Southern part of the country, lying between latitudes 4°321 and 5°331 North, and longitudes 7°251 and 8°251 East. The State is bordered on the east by Cross River State, on the west by Rivers State and Abia State, and on the South by the Atlantic Ocean and the southernmost tip of Cross River State. Akwa Ibom is one of Nigeria’s 36 states with a population of over 5 million people and more than 10 million people in diaspora. It was created in 1987 from the former Cross River State and is currently the highest oil and gas producing state in the country</p>
+        <aside class="box">
     </aside>
   <footer>
     <footer>
         <p>©️2025 ❖ George Martins ❖ Nigeria</p>
     </footer>
   </body>
+  <!-- This page was last modefied on 17/12/2024 -->
 </html>
