--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" target="_blank">Philadelphia Pennsylvania Temple</a></li>
           <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
           <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
+          <li><a href=" https://linkedin.com" target="_blank">LinkedIn</a></li>
+          <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
           <ul class="box">
         </ul>
     </main>
@@ -35,10 +37,12 @@
         <p>Akwa Ibom is a state in Nigeria named after the Qua Iboe river. It is located in the coastal South-Southern part of the country, lying between latitudes 4°321 and 5°331 North, and longitudes 7°251 and 8°251 East. The State is bordered on the east by Cross River State, on the west by Rivers State and Abia State, and on the South by the Atlantic Ocean and the southernmost tip of Cross River State. Akwa Ibom is one of Nigeria’s 36 states with a population of over 5 million people and more than 10 million people in diaspora. It was created in 1987 from the former Cross River State and is currently the highest oil and gas producing state in the country</p>
         <aside class="box">
     </aside>
+
   <footer>
     <footer>
         <p>©️2025 ❖ George Martins ❖ Nigeria</p>
     </footer>
+
   </body>
   <!-- This page was last modefied on 17/12/2024 -->
 </html>
