--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <header>
-        <img src="images/wwrlogo.png" alt="Rafting Adventures Logo">
+        <img src="images/wwrlogo.png" alt="Rafting Adventures Logo" class="logo">
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
 
     <main>
         <div class="hero">
             <img src="images/hero.jpg" alt="Rafting Adventure Hero Image">
-            <h1>WHITE WATER RAFTING</h1>
+            <h1>White Water Rafting</h1>
             <article>
                 <img src="images/Happy client.jpg" alt="Happy Client">
                 <p>
@@ -30,28 +30,53 @@
             </article>
         </div>
 
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>
-                Rafting Adventures was founded in 2024 to offer world-class rafting experiences. We are proud to be industry leaders in adventure and safety.
-            </p>
+            <div class="history-content">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.
+                </p>
+                <img src="images/wwrhistory.jpg" alt="History Image">
+                <p>
+                    Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique.
+                </p>
+            </div>
         </section>
 
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/element 4.jpg" alt="Rafting Adventure 1">
-            <img src="images/element 1.jpg" alt="Rafting Adventure 2">
-            <img src="images/element 5.jpg" alt="Rafting Adventure 3">
-            <img src="images/element 6.jpg" alt="Rafting Adventure 4">
-            <img src="images/element 7.jpg" alt="Rafting Adventure 5">
+            <div class="adventure-gallery">
+                <figure>
+                    <img src="images/element 1.jpg" alt="Adventure 1">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/element 2.jpg" alt="Adventure 2">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/element 3.jpg" alt="Adventure 3">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/element 6.jpg" alt="Adventure 4">
+                    <figcaption>Rapid Rush</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/element 7.jpg" alt="Adventure 5">
+                    <figcaption>Thunder Rapids</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
 
     <footer>
         <p>© 2024 Rafting Adventures | Designed by George Martins</p>
-        <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
-        <a href="https://twitter.com"><img src="images/twitter.webp" alt="Twitter"></a>
-        <a href="https://instagram.com"><img src="images/instagram.webp" alt="Instagram"></a>
+        <div class="social-links">
+            <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
+            <a href="https://twitter.com"><img src="images/twitter.webp" alt="Twitter"></a>
+            <a href="https://instagram.com"><img src="images/instagram.webp" alt="Instagram"></a>
+        </div>
     </footer>
 </body>
 </html>
