project about us page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,11 +34,11 @@
             <h2>History</h2>
             <div class="history-content">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.
+                    White water rafting was founded in 2024 to offer world-class rafting experiences. We are proud to be industry leaders in adventure and safety.
                 </p>
                 <img src="images/wwrhistory.jpg" alt="History Image">
                 <p>
-                    Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique.
+                    We understand that importance of recreational activities and that is why we prioritize our clients satisfaction. 
                 </p>
             </div>
         </section>
@@ -48,23 +48,23 @@
             <div class="adventure-gallery">
                 <figure>
                     <img src="images/element 1.jpg" alt="Adventure 1">
-                    <figcaption>Los Dientes del Diablo</figcaption>
+                    <figcaption>Adventure</figcaption>
                 </figure>
                 <figure>
                     <img src="images/element 2.jpg" alt="Adventure 2">
-                    <figcaption>Big Mallard</figcaption>
+                    <figcaption>Rafting</figcaption>
                 </figure>
                 <figure>
                     <img src="images/element 3.jpg" alt="Adventure 3">
-                    <figcaption>Half Day Adventure</figcaption>
+                    <figcaption>Team work</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/element 6.jpg" alt="Adventure 4">
-                    <figcaption>Rapid Rush</figcaption>
+                    <img src="images/element 8.jpg" alt="Adventure 4">
+                    <figcaption>Smoothh sialing</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/element 7.jpg" alt="Adventure 5">
-                    <figcaption>Thunder Rapids</figcaption>
+                    <img src="images/element 9.jpg" alt="Adventure 5">
+                    <figcaption>A fun outing</figcaption>
                 </figure>
             </div>
         </section>
