--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Us - Rafting Adventures</title>
+    <title>About Us - White water rafting</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
@@ -71,7 +71,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Rafting Adventures | Designed by George Martins</p>
+        <p>© 2024 White water rafting | Designed by George Martins</p>
         <div class="social-links">
             <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.webp" alt="Twitter"></a>
