contact us page

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="George Martins">
-    <meta name="contact" content="contact information about white water rafting">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Us - White water rafting</title>
+    <title>Contact - White water rafting company</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
