--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="George Martins">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact - White water rafting company</title>
+    <title>White water rafting company contact</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
