--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The contact us page of whaite water rafting company" />
     <meta name="author" content="George Martins">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>White water rafting company</title>
+    <title>contact | White water rafting company</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
+
 <body>
     <header>
         <img src="images/wwrlogo.png" alt="white water rafting Logo" class="logo">
