--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The contact us page of whaite water rafting company" />
+    <meta name="contact" content="The contact us page of whaite water rafting company" />
     <meta name="author" content="George Martins">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>contact | White water rafting company</title>
